_SOFTWARE_FACTORY/_archive/veligo/ralph-wiggum/logs/swarm/worker_32_20260115_084713.log
[08:47:13] Worker 32 starting (queue: tdd)
[08:47:51] Worker 32: Processing T1510
[0;32m[AGENT] Real Agent starting[0m
[0;34m[AGENT] Task: /Users/sylvain/_LAPOSTE/_VELIGO2/tools/ralph-wiggum/tasks/T1510.md[0m
[0;34m[AGENT] Queue: tdd[0m
[0;34m[AGENT] Backend: opencode (minimax/MiniMax-M2.1)[0m
[0;32m[AGENT] Starting task: T1510[0m
[0;34m[AGENT] Iteration 1/10[0m
[0m[AGENT] Calling opencode with model: minimax/MiniMax-M2.1[0m
[0;31m[AGENT] opencode failed (exit -15): [91m[1m| [0m[90m Bash     [0mCheck if coverage tool is available

tarpaulin not installed

[94m[1m| [0m[90m Glob     [0m{"pattern":"**/tests/**/*.rs"}
[91m[1m| [0m[90m Bash     [0mRun Rust tests to see current state

    Blocking waiting for file lock on build directory
   Compiling veligo-backend v0.1.0 (/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend)
error: expected a trait impl
  --> backend/src/services/user_service.rs:20:1
   |
20 | #[async_trait]
   | ^^^^^^^^^^^^^[0m
[0;33m[AGENT] No actions found in response[0m
[0;34m[AGENT] Iteration 2/10[0m
[0m[AGENT] Calling opencode with model: minimax/MiniMax-M2.1[0m
[0;31m[AGENT] opencode failed (exit -9): [96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/services/user_service.rs
[91m[1m| [0m[90m Bash     [0mCheck full compilation errors

    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Checking veligo-backend v0.1.0 (/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend)
error: expected a trait impl
  --> backend/src/services/user_service.rs:20:1
   |
20 | #[async_tra[0m
[0;33m[AGENT] No actions found in response[0m
[0;34m[AGENT] Iteration 3/10[0m
[0m[AGENT] Calling opencode with model: minimax/MiniMax-M2.1[0m
[0;31m[AGENT] opencode failed (exit -15): [0m

============================================================
RESULT: FAILED
============================================================
 macro-backtrace for more info)

error: expected a trait impl
  --> backend/src/services/bike_service.rs:23:1
   |
23 | #[async_trait]
   | ^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `async_trait` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected a trait impl
  --> backend/src/services/rental_service.rs:25:1
   |
25 | #[async_trait]
   | ^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `async_trait` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected a trait impl
  --> backend/src/services/auth_service.rs:27:1
   |
27 | #[async_trait]
   | ^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `async_trait` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0432]: unresolved import `chrono`
 --> backend/src/services/user_service.rs:6:5
  |
6 | use chrono::Utc;
  |     ^^^^^^ use of u

=== LLM Response ===
Let me investigate the compilation error and fix it.
I see the issues - missing dependencies and async_trait configuration. Let me fix them:
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/services/user_service.rs
[91m[1m| [0m[90m Bash     [0mCheck full compilation errors

    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Checking veligo-backend v0.1.0 (/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend)
error: expected a trait impl
  --> backend/src/services/user_service.rs:20:1
   |
20 | #[async_trait]
   | ^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `async_trait` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected a trait impl
  --> backend/src/services/bike_service.rs:23:1
   |
23 | #[async_trait]
   | ^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `async_trait` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected a trait impl
  --> backend/src/services/rental_service.rs:25:1
   |
25 | #[async_trait]
   | ^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `async_trait` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected a trait impl
  --> backend/src/services/auth_service.rs:27:1
   |
27 | #[async_trait]
   | ^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `async_trait` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0432]: unresolved import `chrono`
 --> backend/src/services/user_service.rs:6:5
  |
6 | use chrono::Utc;
  |     ^^^^^^ use of unresolved module or unlinked crate `chrono`
  |
  = help: if you wanted to use a crate named `chrono`, use `cargo add chrono` to add it to your `Cargo.toml`

error[E0432]: unresolved import `bcrypt`
 --> backend/src/services/user_service.rs:7:5
  |
7 | use bcrypt::{hash, veri

ERROR: LLM call failed
[08:51:37] Worker 32: T1510 FAILED (exit 1)
[08:52:20] Worker 32: Processing T1557
[0;32m[AGENT] Real Agent starting[0m
[0;34m[AGENT] Task: /Users/sylvain/_LAPOSTE/_VELIGO2/tools/ralph-wiggum/tasks/T1557.md[0m
[0;34m[AGENT] Queue: tdd[0m
[0;34m[AGENT] Backend: opencode (minimax/MiniMax-M2.1)[0m
[0;32m[AGENT] Starting task: T1557[0m
[0;34m[AGENT] Iteration 1/10[0m
[0m[AGENT] Calling opencode with model: minimax/MiniMax-M2.1[0m
[0;31m[AGENT] opencode failed (exit -15): [91m[1m| [0m[90m Bash     [0mList project root directory

total 9448
drwxr-xr-x  263 sylvain  staff    8416 Jan 15 07:03 .
drwxr-xr-x   50 sylvain  staff    1600 Dec 16 20:12 ..
-rw-r--r--    1 sylvain  staff       3 Jan 14 18:02 ...
-rw-r--r--    1 sylvain  staff   14340 Jan 14 14:50 .DS_Store
drwxr-xr-x    2 sylvain  staff      64 Dec 26 00:00 .auth
drwx------    3 sylvain  staff      96 Jan 15 08:29 .claude
-rw-r--r--    1 sylvain  staff    1715 Dec 13 13:31 .cursorrules-fix
-rw-r--r--  [0m
[0;32m[AGENT] Agent reported SUCCESS, verifying...[0m
[0;31m[AGENT] No actions executed - cannot accept SUCCESS[0m
[0;34m[AGENT] Iteration 2/10[0m
[0m[AGENT] Calling opencode with model: minimax/MiniMax-M2.1[0m
